@@ -1,4 +1,4 @@
- <?xml version="1.0" standalone="no"?>
+<?xml version="1.0" standalone="no"?>
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN" 
 "http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd" [
 <!ENTITY version "2.2.3">
@@ -1176,16 +1176,6 @@ in reports.
     </sect1>
 <sect1 id="dialogs">
        <title>Additional GNOME Time Tracker Dialogs</title>
-<sect2 id="newproject">
-      <title>The New Project Dialog</title>
-      <para>This dialog is fairly small. It just wants to know what
-        you want to call the new project. Just enter a title for the
-        new project and press <guibutton>OK</guibutton>.
-        If you change your mind and don't want
-        <application> GNOME Time Tracker</application> to add a new project,
-        press <guibutton>Cancel</guibutton>.
-      </para>
-    </sect2>      
 <sect2 id="idletimer">
   <title>The Idle Timer Dialogs</title>
   <para>When <application>GNOME Time Tracker</application> detects that you
