@@ -1,6 +1,7 @@
 2007-09-17  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* doc/C/gnotime.xml: Added information about creating new projects.
+	Removed the "The New Project Dialog" section
 
 	* src/menus.c: Renamed the Edit menu to Projects
 
